removed Rfast dependency in jupyter notebook and binder install

--- a/essay.ipynb
+++ b/essay.ipynb
@@ -142,7 +142,6 @@
     }
    ],
    "source": [
-    "library(Rfast)\n",
     "library(margins)\n",
     "library(dplyr)\n",
     "library(ggplot2)\n",
@@ -352,9 +351,7 @@
     "    c(nrow(gradient_matrix_kinda))\n",
     "  \n",
     "  if (length(split_indices) < 3){\n",
-    "    vcov_dydx_intermediate <- Rfast::mat.mult(gradient_matrix_kinda, model_vcov)\n",
-    "    vcov_dydx <- Rfast::mat.mult(vcov_dydx_intermediate,\n",
-    "                                 Rfast::transpose(gradient_matrix_kinda))\n",
+    "    vcov_dydx <- (gradient_matrix_kinda %*% model_vcov) %*% t(gradient_matrix_kinda)\n",
     "    SE_dydx <- sqrt(diag(vcov_dydx))\n",
     "    \n",
     "  } else {\n",
@@ -362,8 +359,7 @@
     "    for (i in 1:(length(split_indices)-1)){\n",
     "      baby_matrix <- gradient_matrix_kinda[split_indices[[i]]:split_indices[[i+1]], ]\n",
     "      # print(paste0(split_indices[i],\"to\", split_indices[i+1]))\n",
-    "      baby_vcov <- Rfast::mat.mult(baby_matrix, model_vcov)\n",
-    "      baby_vcov <- Rfast::mat.mult(baby_vcov, Rfast::transpose(baby_matrix))\n",
+    "      baby_vcov <-  (baby_matrix %*% model_vcov) %*% t(baby_matrix)\n",
     "      baby_SE[split_indices[[i]]:split_indices[[i+1]], ] <- sqrt(diag(baby_vcov))\n",
     "      i <- i + 1\n",
     "    }\n",
@@ -4777,7 +4773,7 @@
    "source": [
     "# References\n",
     "\n",
-    "[<a id=\"cit-Wager_and_Athey\" href=\"#call-Wager_and_Athey\">1</a>] Wager Stefan and Athey Susan, ``_Estimation and Inference of Heterogeneous Treatment Effects using Random Forests_'', arXiv e-prints, vol. , number , pp. arXiv:1510.04342, Oct 2015.\n",
+    "[<a id=\"cit-Wager_and_Athey\" href=\"#call-Wager_and_Athey\">1</a>] {Wager} Stefan and {Athey} Susan, ``_Estimation and Inference of Heterogeneous Treatment Effects using Random Forests_'', arXiv e-prints, vol. , number , pp. arXiv:1510.04342, Oct 2015.\n",
     "\n",
     "[<a id=\"cit-Angrist_Imbens\" href=\"#call-Angrist_Imbens\">2</a>] W. Guido and D. Joshua, ``_Identification and Estimation of Local Average Treatment Effects_'', Econometrica, vol. 62, number 2, pp. 467--475,  1994.  [online](http://www.jstor.org/stable/2951620)\n",
     "\n"
@@ -4785,7 +4781,7 @@
   }
  ],
  "metadata": {
-  "hide_input": true,
+  "hide_input": false,
   "kernelspec": {
    "display_name": "R",
    "language": "R",
