--- a/essay.Rmd
+++ b/essay.Rmd
@@ -9,6 +9,7 @@ output:
     theme: journal
     toc: yes
     toc_float: yes
+keep_tex: yes
 editor_options:
   chunk_output_type: console
 bibliography: bibliography.bib
@@ -22,7 +23,7 @@ abstract: I present some practical tests for detecting failure of the monotonici
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE,
+knitr::opts_chunk$set(echo = FALSE,
                       cache = TRUE,
                       message = FALSE,
                       warning = FALSE,
@@ -501,6 +502,7 @@ The Holm-Bonferroni procedure [@Holm_Bonferroni] controls the family-wise error 
 
 
 ```{r size_hist}
+library(plotly)
 
 tidy_adj_p_cov %>% 
     filter(method == "none" | method == "fdr" | method == "holm") %>%
@@ -520,7 +522,108 @@ ggplot(aes(y = empirical_alpha,
        colour = "Method") +
   theme(legend.position = "bottom") +
   scale_x_continuous(breaks = 1:10)
+
+accumulate_by <- function(dat, var) {
+  var <- lazyeval::f_eval(var, dat)
+  lvls <- plotly:::getLevels(var)
+  dats <- lapply(seq_along(lvls), function(x) {
+    cbind(dat[var %in% lvls[seq(1, x)], ], frame = lvls[[x]])
+  })
+  dplyr::bind_rows(dats)
+}
+
+
+
+tidy_adj_p_cov %>% 
+  ungroup() %>% 
+  filter(method == "none" | method == "fdr" | method == "holm") %>% 
+  accumulate_by(~n_cov) %>% 
+  group_by(method) %>% 
+  plot_ly(
+    x = ~n_cov,
+    frame = ~frame,
+    y = ~empirical_alpha,
+    split = ~method,
+    mode = "markers+lines",
+    type = "scatter"
+  )  %>% 
+    add_segments(x = 0,
+               xend = 10,
+               y = 0.05,
+               yend = 0.05,
+               line = list(dash = "dot"),
+               showlegend = FALSE) %>% 
+  layout(
+    yaxis = list(type = "log",
+                 title = "Empirical Alpha"),
+    xaxis = list(title = "N Covariaties"),
+    title = "Saturated First Stage Test Size Simulations"
+  ) %>% 
+   animation_opts(
+    1000, easing  = "quad" , redraw = FALSE
+  ) %>% 
+    animation_slider(
+    hide = TRUE
+    ) %>% 
+    animation_button(
+    x = 0.05, xanchor = "left", y = 0, yanchor = "bottom"
+  ) %>% 
+  layout(legend = list(orientation = 'h'))
+
+
 ```
+
+
+
+```{r plotly_density}
+
+df <- adjusted_pvals_cov %>% 
+  unnest() %>% 
+  select(-pvals) %>% 
+  gather(method, pval, holm:none) %>% 
+  mutate(reject_null = ifelse(pval < 0.05, TRUE, FALSE)) %>% 
+  group_by(draw, n_cov, n_tiles,method) %>% 
+  summarise(min_p = min(pval),
+            n_groups = mean(n_groups)) %>% 
+  mutate(g = draw %/% 10)
+
+
+
+break_points <- c(seq(from = 10, to = 100, by = 10), seq(from = 150, to = 2000, by = 50))
+
+density_ed <- break_points %>% 
+  map_df(~filter(df, draw <= .x) %>% 
+           mutate(cg = .x) %>% 
+           group_by(cg, method) %>% 
+           do(dens = density(.$min_p)))
+
+
+density_ed %>% 
+  mutate(dens_x = list(dens$x),
+         dens_y = list(dens$y)) %>% 
+  unnest(dens_x, dens_y) %>% 
+  mutate(simulated_draws = cg) %>% 
+  plot_ly(
+    x = ~dens_x,
+    y = ~dens_y,
+    frame = ~simulated_draws,
+    split = ~method,
+    type = "scatter",
+    mode = "lines",
+    fill = "tozeroy"
+    ) %>% 
+  animation_slider(
+    currentvalue = list(prefix = "Simulated Draws: ", font = list(color="red"))
+  ) %>% 
+  layout(legend = list(orientation = 'h'),
+         yaxis = list(title = "Density"),
+         xaxis = list(title = "P-Value"),
+         title = "Density of P Values After Corrections")
+
+
+```
+
+
 
 Moving onto the number of quantile bins the multiple comparison problem becomes even more apparent. Using just 3 quantile bins - low, medium and high for instance - with 4 explanatory covariates leads to rejection of the null hypothesis in almost 90\% of cases when the null is in fact true.
 
@@ -677,113 +780,6 @@ Throughout the essay I use an inverted y-axis when displaying $p$-values - the r
 
 ### Subgroup Heterogeneity
 
-It's clear from the figure below that at even moderate defier levels both tests are extremely powerful. When considering the saturated first stage test this is hardly surprising - it has long been acknowledged that testing whether a first stage "goes the right way" using sub-samples or interaction terms is a valid test of monotonicity and we'd expect test properties to be similar to standard frequentist testing of OLS.
-
-The random forest method, too, performs surprisingly well - even better than the saturated first stage test it would seem at first glance. Both tests improve substantially as sample size increases and as defier proportion increases as we'd expect.
-
-```{r p_value_normal_scale_plot}
-simulations_power_subgroup %>% 
-  filter(pct_defiers_true > 0) %>% 
-  ggplot(aes(x = pct_defiers_true,
-             y = pval_holm,
-             colour = model)) +
-  geom_point(alpha = 0.15) +
-  geom_hline(yintercept = 0.05,
-             linetype = "longdash",
-             alpha = 0.5) +
-  scale_y_reverse() +
-  scale_x_continuous(labels = scales::percent_format(accuracy = 1)) +
-  facet_grid(N~model) +
-  labs(x = "Defier Percentage",
-       y = "P-Value",
-       caption = "Note: Y-axis scale inverted. \n Dashed line indicates a p-value of 0.05.",
-       title = "P-Values from Power Simulations") +
-  theme_minimal() +
-  guides(colour = "none") 
-```
-
-
-The difference between the figure using a linear scale and $p$-values displayed on a log scale, below, clearly motivates the use of a log transform. $p$-values from the medium and larger dataset are orders of magnitude smaller than the $p$-values from the smallest dataset as we'd expect.
-
-
-
-```{r p_val_power_neg_log_10}
-simulations_power_subgroup %>% 
-  unite(mod_N, model, N, remove = FALSE) %>% 
-  filter(pct_defiers_true > 0) %>% 
-  ggplot(aes(x = pct_defiers_true,
-             y = pval_holm,
-             group = mod_N)) +
-  geom_point(alpha = 0.15, aes(colour = model)) +
-  geom_hline(yintercept = 0.05,
-             linetype = "longdash",
-             alpha = 0.5) +
-  scale_y_continuous(trans = negative_log_trans(10)) +
-  scale_x_continuous(labels = scales::percent_format(accuracy = 1)) +
-  guides(colour = "none") +
-  theme_minimal() +
-  facet_grid(N~model, 
-             scales = "free_y") +
-  labs(x = "Defier Percentage",
-       y = "P-Value",
-       caption = "Note: Y-Axis on negative log(10) scale. \n Dashed line indicates a p-value of 0.05. \n Line of best fit in purple.",
-       title = "P-Values from Power Simulations") +
-  geom_smooth(method = lm,
-              se = FALSE,
-              alpha = 0.2,
-              colour = "violetred")
-
-```
-
-
-
-As defier proportion increases test power increases rapidly. For the larger and medium dataset the ability to detect defiers at even levels as small as 2\% is particularly impressive.
-
-```{r p_val_low_defier_plot}
-simulations_power_subgroup %>% 
-  filter(pct_defiers_true > 0) %>% 
-  ggplot(aes(x = pct_defiers_true,
-             y = pval_holm,
-             colour = model)) +
-  geom_point(alpha = 0.15,
-             aes(colour = model)) +
-  geom_hline(yintercept = 0.05, linetype = "longdash") +
-  scale_y_reverse() +
-  geom_smooth(se = TRUE,
-              colour = "violetred",
-              alpha = 0.5) +
-  scale_x_continuous(limits = c(0, 0.1),
-                     labels = scales::percent_format(accuracy = 1)) +
-  theme_minimal() +
-  facet_grid(N~model, scales = "free_y") +
-  guides(colour = "none") +
-  labs(x = "Defier Percentage",
-       y = "P-Value",
-       title = "Power Simulation Results at Low Defier Proportion",
-       caption = "Note: Y-axis scale inverted. \n Dashed line indicates a p-value of 0.05.")
-
-```
-
-
-One concern may be that whilst the tests are capable of detecting defiers, this may be driven by defier activity in the tails. That is, the tests may work but only because of extremely "defiant" defiers since we only consider the most extreme defier in each sample. Fortunately, we can turn to each test's respective model predictions and compare estimated number of defiers against the actual number of defiers present in the data. The results are reassuring, as the number of defiers grow the number of predicted defiers grows too. 
-
-```{r defier_true_vs_estim}
-simulations_power_subgroup %>% 
-  ggplot(aes(x = n_defiers_true,
-             y = n_defiers_estimated,
-             colour = model)) +
-  geom_point(alpha = 0.15) +
-  facet_grid(N~model) +
-  geom_abline(slope = 1,
-              intercept = 0) +
-  theme_minimal() +
-  guides(colour = "none") +
-  labs(x = "N True Defiers",
-       y = "N Predicted Defiers",
-       title = "Defier Predictions vs Reality",
-       caption = "Note: Line of equality in black.")
-  
-```
 
 
 The simulations show that using medium to large datasets the tests are extremely powerful - even at defier proportions of just 5\% both tests have a near 100\% chance of correctly rejecting the null. The smaller dataset is clearly noisier but again shows promising results - at defier proportions around 20\% the tests are able to pick up the presence of defiers in a sample almost perfectly.
@@ -839,55 +835,26 @@ sim_bin %>%
 
 
 
-```{r pval_mean_plot}
-sim_bin %>% 
-  na.omit() %>% 
-  filter(pct_defiers_true < 0.25) %>% 
-  summarise(m_pval = mean(pval_defier),
-         sd_pval = sd(pval_defier)) %>% 
-  ggplot(aes(x = gr, y = m_pval, colour = model, group = model)) +
-  geom_point() + 
-  geom_line() + 
-  geom_linerange(aes(x = gr,
-                     ymin = m_pval - 1.96*sd_pval,
-                     ymax = m_pval + 1.96*sd_pval)) +
-  theme_minimal() +
-  guides(size = "none",
-         colour = "none") +
+One concern may be that whilst the tests are capable of detecting defiers, this may be driven by defier activity in the tails. That is, the tests may work but only because of extremely "defiant" defiers since we only consider the most extreme defier in each sample. Fortunately, we can turn to each test's respective model predictions and compare estimated number of defiers against the actual number of defiers present in the data. The results are reassuring, as the number of defiers grow the number of predicted defiers grows too. 
+
+```{r defier_true_vs_estim}
+simulations_power_subgroup %>% 
+  ggplot(aes(x = n_defiers_true,
+             y = n_defiers_estimated,
+             colour = model)) +
+  geom_point(alpha = 0.15) +
   facet_grid(N~model) +
-    labs(y = "Mean P-Value",
-       x = "Defier Proportion",
-       caption = "Note: Dashed line indicates p-value of 0.05. \n 95% Confidence Intervals Displayed.",
-       title = "Mean P-Value as a Function of Defier Proportion") +
-  geom_hline(yintercept = 0.05,
-             linetype = "longdash",
-             alpha = 0.5) +
-  scale_y_reverse() +
-  scale_x_continuous(breaks = seq(from = 0,
-                                  to = 1,
-                                  0.1),
-                     labels = scales::percent_format(accuracy = 1))
+  geom_abline(slope = 1,
+              intercept = 0) +
+  theme_minimal() +
+  guides(colour = "none") +
+  labs(x = "N True Defiers",
+       y = "N Predicted Defiers",
+       title = "Defier Predictions vs Reality",
+       caption = "Note: Line of equality in black.")
   
-
-# sim_bin_summ %>% 
-#   ggplot(aes(x = gr, y = pct_rejected, colour = model, group = model)) +
-#   geom_point() + 
-#   geom_line() + 
-#   geom_linerange(aes(x = gr,
-#                      ymin = pct_rejected - 1.96*sd_rejected,
-#                      ymax = pct_rejected + 1.96*sd_rejected)) +
-#   theme_minimal() +
-#   scale_y_continuous(labels = scales::percent_format(accuracy = 1)) +
-#   guides(size = "none",
-#          colour = "none") +
-#   facet_grid(N~model) +
-#     labs(y = "Proportion Null Rejected",
-#        x = "Defier Proportion",
-#        caption = "Note: Point size indicates number of draws in bin. \n 95% Confidence Intervals Displayed.",
-#        title = "Power As a Function of Defier Proportion")
-  
-
 ```
+
 
 ### Individual Heterogeneity
 
@@ -930,86 +897,6 @@ simulations_power_indiv <- simulations_power_indiv %>%
 
 
 
-```{r power_indiv_inverse_p}
-
-simulations_power_indiv %>% 
-  unite(mod_N, model, N, remove = FALSE) %>% 
-  filter(pct_defiers_true > 0) %>% 
-  filter(pval_holm > 1e-300) %>% 
-  ggplot(aes(x = pct_defiers_true,
-             y = pval_holm,
-             group = mod_N)) +
-  geom_point(alpha = 0.15, aes(colour = model)) +
-  geom_hline(yintercept = 0.05,
-             linetype = "longdash",
-             alpha = 0.5) +
-  scale_y_continuous(trans = negative_log_trans(10)) +
-  scale_x_continuous(labels = scales::percent_format(accuracy = 1)) +
-  guides(colour = "none") +
-  theme_minimal() +
-  facet_grid(N~model, scales = "free_y") +
-  labs(x = "Defier Percentage",
-       y = "P-Value",
-       caption = "Note: Y-Axis on negative log(10) scale. \n Dashed line indicates a p-value of 0.05. \n Line of best fit in purple.",
-       title = "P-Values from Power Simulations") +
-  geom_smooth(method = lm,
-              se = FALSE,
-              alpha = 0.2,
-              colour = "violetred")
-```
-
-
-Similar to the subgroup heterogeneous simulations, $p$-values swiftly increase in significance as defier proportion increases even at very low levels of defiance. The honest causal forest's superiority in this context is transparent - the LOESS line of best fit seems to be concave rather than convex, increasing at a faster rate than it's traditional counterpart.
-
-```{r power_indiv_sim_low_prop}
-
-simulations_power_indiv %>% 
-  filter(pct_defiers_true > 0) %>% 
-  ggplot(aes(x = pct_defiers_true,
-             y = pval_holm,
-             colour = model)) +
-  geom_point(alpha = 0.15,
-             aes(colour = model)) +
-  geom_hline(yintercept = 0.05, linetype = "longdash") +
-  scale_y_reverse() +
-  geom_smooth(se = TRUE,
-              colour = "violetred",
-              alpha = 0.5) +
-  scale_x_continuous(limits = c(0, 0.1), labels = scales::percent_format(accuracy = 1)) +
-  theme_minimal() +
-  facet_grid(N~model, scales = "free_y") +
-  guides(colour = "none") +
-  labs(x = "Defier Percentage",
-       y = "P-Value",
-       title = "Power Simulation Results at Low Defier Proportion",
-       caption = "Note: Y-axis scale inverted. \n Dashed line indicates a p-value of 0.05.")
-
-
-```
-
-
-
-A common feature of the individual heterogeneity specification seems to be frequent over reporting of true defier figures - this could, in part, explain some of the discrepancies in test performance when we take the tests to the data since the saturated first stage seems particularly prone to this issue.
-
-```{r sim_power_indiv_N_N}
-
-simulations_power_indiv %>% 
-  ggplot(aes(x = n_defiers_true,
-             y = n_defiers_estimated,
-             colour = model)) +
-  geom_point(alpha = 0.15) +
-  facet_grid(N~model) +
-  geom_abline(slope = 1, intercept = 0) +
-  theme_minimal() +
-  guides(colour = "none") +
-  labs(x = "N True Defiers",
-       y = "N Predicted Defiers",
-       title = "Defier Predictions vs Reality",
-       caption = "Note: Line of equality in black.")
-
-```
-
-
 Despite misgivings concerning test performance under model misspecification both tests still perform strongly with almost perfect identification at 15\% defier proportions in the larger datasets. The apparent paradox between a noisier DGP and better test performance highlights why comparisons between tests across DGPs should be undertaken with caution. Power is a function of defier magnitude; defier proportion and the size of the error term but only defier proportion and error variance is held constant across specifications.
 
 ```{r power_prop}
@@ -1046,6 +933,29 @@ sim_bin_indiv %>%
 
 ```
 
+
+A common feature of the individual heterogeneity specification seems to be frequent over reporting of true defier figures - this could, in part, explain some of the discrepancies in test performance when we take the tests to the data since the saturated first stage seems particularly prone to this issue.
+
+```{r sim_power_indiv_N_N}
+
+simulations_power_indiv %>% 
+  ggplot(aes(x = n_defiers_true,
+             y = n_defiers_estimated,
+             colour = model)) +
+  geom_point(alpha = 0.15) +
+  facet_grid(N~model) +
+  geom_abline(slope = 1, intercept = 0) +
+  theme_minimal() +
+  guides(colour = "none") +
+  labs(x = "N True Defiers",
+       y = "N Predicted Defiers",
+       title = "Defier Predictions vs Reality",
+       caption = "Note: Line of equality in black.")
+
+```
+
+
+
 Overall it seems both tests maintain reasonable levels of power under model mispecification issues although the saturated first stage suffers a little more - again this in part, could help explain the observed divergence between the two tests later.
 
 ### Non-Linear Heterogeneity
@@ -1067,88 +977,8 @@ rm(simulations_power_non_linear_small,
 
 
 
-Using the non-linear data generating process the magnitude of $p$-values has increased significantly i.e. $p$-values are much less small compared to the subgroup and individually heterogeneous cases. Now the smallest $p$-values are around $1 \times e^{-35}$ as opposed to $1 \times e^{-250}$ as seen above. Interestingly, the honest causal forest seems to produce far smaller $p$-values at given defier proportions than the honest causal forest.  The honest causal forest test enjoys a comparative advantage at picking up non-linearities at even the tiniest sign of defiance.
-
-```{r sim_power_p_inverse}
-simulations_power_nl %>% 
-  unite(mod_N, model, N, remove = FALSE) %>% 
-  filter(pct_defiers_true > 0) %>%
-  filter(pval_defier > 1e-300) %>% 
-  ggplot(aes(x = pct_defiers_true,
-             y = pval_defier,
-             group = mod_N)) +
-  geom_point(alpha = 0.15, aes(colour = model)) +
-  geom_hline(yintercept = 0.05,
-             linetype = "longdash",
-             alpha = 0.5) +
-  scale_y_continuous(trans = negative_log_trans(10)) +
-  scale_x_continuous(labels = scales::percent_format(accuracy = 1)) +
-  guides(colour = "none") +
-  theme_minimal() +
-  facet_grid(N~model,
-             scales = "free_y") +
-  labs(x = "Defier Percentage",
-       y = "P-Value",
-       caption = "Note: Y-Axis on negative log(10) scale. \n Dashed line indicates a p-value of 0.05. \n Line of best fit in purple.",
-       title = "P-Values from Power Simulations") +
-  geom_smooth(method = lm,
-              se = FALSE,
-              alpha = 0.2,
-              colour = "violetred")
-```
 
 
-In a non-linear context it seems that saturated first stage struggles to detect defiance in all three of the datasets considered whereas honest causal forest only struggles in the very smallest dataset.
-```{r sim_power_low_nl}
-
-simulations_power_nl %>% 
-  filter(pct_defiers_true > 0) %>% 
-  ggplot(aes(x = pct_defiers_true,
-             y = pval_defier,
-             colour = model)) +
-  geom_point(alpha = 0.15,
-             aes(colour = model)) +
-  geom_hline(yintercept = 0.05,
-             linetype = "longdash") +
-  scale_y_reverse() +
-  geom_smooth(se = TRUE,
-              colour = "violetred",
-              alpha = 0.5) +
-  scale_x_continuous(limits = c(0, 0.1),
-                     labels = scales::percent_format(accuracy = 1)) +
-  theme_minimal() +
-  facet_grid(N~model, scales = "free_y") +
-  guides(colour = "none") +
-  labs(x = "Defier Percentage",
-       y = "P-Value",
-       title = "Power Simulation Results at Low Defier Proportion",
-       caption = "Note: Y-axis scale inverted. \n Dashed line indicates a p-value of 0.05.")
-
-
-
-```
-
-
-
-The overestimation of defiers exhibited by the individual heterogeneous effects has vanished and defier estimation using honest causal forest seems to be consistent and well behaved throughout. Again, at first glance there's reassuring evidence that honest causal forest is accurately estimating the _number_, if not _identity_, of defiers in a dataset and test performance isn't driven by "tail defiance". However,
-the saturated first stage model now has the opposite issue - it systematically underestimates the number of defiers in a dataset.
-```{r simulations_power_N_N_nl}
-simulations_power_nl %>% 
-  ggplot(aes(x = n_defiers_true,
-             y = n_defiers_estimated,
-             colour = model)) +
-  geom_point(alpha = 0.15) +
-  facet_grid(N~model) +
-  geom_abline(slope = 1,
-              intercept = 0) +
-  theme_minimal() +
-  guides(colour = "none") +
-  labs(x = "N True Defiers",
-       y = "N Predicted Defiers",
-       title = "Defier Predictions vs Reality",
-       caption = "Note: Line of equality in black.")
-
-```
 
 
 
@@ -1191,6 +1021,29 @@ sim_bin_nl %>%
                      labels = scales::percent_format(accuracy = 1))
 
 ```
+
+
+
+The overestimation of defiers exhibited by the individual heterogeneous effects has vanished and defier estimation using honest causal forest seems to be consistent and well behaved throughout. Again, at first glance there's reassuring evidence that honest causal forest is accurately estimating the _number_, if not _identity_, of defiers in a dataset and test performance isn't driven by "tail defiance". However,
+the saturated first stage model now has the opposite issue - it systematically underestimates the number of defiers in a dataset.
+```{r simulations_power_N_N_nl}
+simulations_power_nl %>% 
+  ggplot(aes(x = n_defiers_true,
+             y = n_defiers_estimated,
+             colour = model)) +
+  geom_point(alpha = 0.15) +
+  facet_grid(N~model) +
+  geom_abline(slope = 1,
+              intercept = 0) +
+  theme_minimal() +
+  guides(colour = "none") +
+  labs(x = "N True Defiers",
+       y = "N Predicted Defiers",
+       title = "Defier Predictions vs Reality",
+       caption = "Note: Line of equality in black.")
+
+```
+
 
 
 Overall, both methods fare well under a range of data generating processes. Each test has individual strengths and weaknesses suggesting a thorough investigation of defiance should include both.  
@@ -2692,7 +2545,7 @@ table_5_models_80 <- c("worked_m",
 
 stargazer(table_5_models_80,
           omit = "Constant",
-          title = "WALD ESTIMATES OF LABOR-SUPPLY MODELS 1980 DATA - REPLICATED",header = FALSE,type = "html",
+          title = "WALD ESTIMATES OF LABOR-SUPPLY MODELS 1980 DATA - REPLICATED",header = FALSE,type = "latex",
           dep.var.labels = c("Worked",
                             "Weeks",
                             "Hours",
@@ -2701,7 +2554,7 @@ stargazer(table_5_models_80,
 
 stargazer(table_5_models_90,
           omit = "Constant",
-          title = "WALD ESTIMATES OF LABOR-SUPPLY MODELS 1990 DATA - REPLICATED",header = FALSE,type = "html",
+          title = "WALD ESTIMATES OF LABOR-SUPPLY MODELS 1990 DATA - REPLICATED",header = FALSE,type = "latex",
           dep.var.labels = c("Worked",
                             "Weeks",
                             "Hours",
@@ -2752,7 +2605,7 @@ stargazer(table_6_models_80,
                             "Hours",
                             "Income",
                             "Family Income"),
-          type = "html")
+          type = "latex")
 
 stargazer(table_6_models_90, keep = "morekidsTRUE",
           title = "2SLS ESTIMATES OF LABOR-SUPPLY MODELS USING 1990 CENSUS DATA - REPLICATION",
@@ -2762,7 +2615,7 @@ stargazer(table_6_models_90, keep = "morekidsTRUE",
                             "Hours",
                             "Income",
                             "Family Income"),
-          type = "html")
+          type = "latex")
 rm(table_6_models_80, table_6_models_90)
 ```
 
@@ -2817,7 +2670,7 @@ stargazer(col_1,
           col_12,
           se = SEs,
           omit.table.layout = "sn",
-          type = "html",
+          type = "latex",
           omit = "Constant",
           dep.var.labels = c("English Comprehension",
                              "Maths",
@@ -2885,7 +2738,7 @@ stargazer(iv_maim_verb_full_5,
           se = SEs_IV_5,
           column.labels = c("Full Sample", "Discontinuity Sample"),
           column.separate = c(2, 2),
-          type = "html",
+          type = "latex",
           title = "IV Maimonides Rule Fifth Grade",
           notes = "HAC standard errors used instead of Moulton factor adjustment.")
 
@@ -2907,7 +2760,7 @@ stargazer(iv_maim_verb_full_4,
           se = SEs_IV_4,
           column.labels = c("Full Sample", "Discontinuity Sample"),
           column.separate = c(2, 2),
-          type = "html",
+          type = "latex",
           title = "IV Maimonides Rule Fourth Grade",
           notes = "HAC standard errors used instead of Moulton factor adjustment.")
 
@@ -2925,9 +2778,6 @@ rm(SEs_IV_4,
 
 ```
 
-```{r save_image, cache = TRUE}
-save.image("C:/Users/edjee/Dropbox/Ed/cached_run.RData")
-```
 
 # References
 
