--- a/essay.ipynb
+++ b/essay.ipynb
@@ -154,7 +154,6 @@
     "library(sandwich)\n",
     "library(scales)\n",
     "library(tidyr)\n",
-    "library(gt)\n",
     "library(haven)\n",
     "library(broom)\n",
     "library(grf)\n",
@@ -162,6 +161,11 @@
     "library(furrr)\n",
     "library(repr)\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Note tables will use different format to html output as gt not installed on this container\n",
+    "# For the sake of brevity results in this notebook are loaded from a .csv rather than re-ran.\n",
     "\n",
     "\n",
     "\n",
